--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@typegoose/typegoose": "^9.5.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongoose": "6.7.2",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
