--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^7.5.1",
     "@typegoose/typegoose": "^9.5.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "6.7.2",
     "nestjs-typegoose": "^7.1.38",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -38,9 +42,11 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
