--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,14 @@
 name: Publish Docker
 
-on:
-  push:
-    branches: [main]
-
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
-      - name: Publish to registy
-        uses: elgohr/Publish-Docker-Github-Action@main
+      - uses: actions/checkout@v3
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@v5
         with:
-          registry: docker.pkg.github.com
-          name: docker.pkg.github.com/xartv/mytop-api/mytop-api
+          name: ghcr.io/xartv/mytop-api/mytop-api
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: 'develop'
