--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   top.api:
-    image: docker pull ghcr.io/xartv/mytop-api:main
+    image: ghcr.io/xartv/mytop-api:main
     container_name: top-api
     restart: always
     ports:
