--- a/package.json
+++ b/package.json
@@ -27,17 +27,22 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/serve-static": "^4.0.0",
     "@typegoose/typegoose": "^9.5.0",
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.3.1",
+    "fs-extra": "^11.2.0",
     "mongoose": "6.7.2",
     "nestjs-typegoose": "^7.1.38",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
@@ -45,7 +50,9 @@
     "@nestjs/testing": "^7.5.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.8",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^26.0.15",
+    "@types/multer": "^1.4.11",
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.10",
