fix file module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "strictPropertyInitialization": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-  },
+    "noFallthroughCasesInSwitch": false
+  }
 }
