--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
@@ -56,6 +57,7 @@
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.10",
+    "@types/xml2js": "^0.4.14",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
