--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
     "sharp": "^0.33.2",
+    "telegraf": "^4.15.3",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
